# chess

./: .gitignore  CMakeLists.txt  README.md  builds.bat
browser-ui-app/: README.md
browser-ui-app/include/: external_libs.h
browser-ui-app/src/: browser_launcher.cpp  browser_launcher.h  current_game.cpp  current_game.h  main.cpp  server.cpp  server.h
browser-ui-app/src/html/: chessboard.js  index.html  scripts.js  styles.css
